force-app/main/default/objects/Sales_Order_Request__c/Sales_Order_Request__c.object-meta.xml
<CustomObject>
    <label>Sales Order Request</label>
    <nameField>
        <displayFormat>SOR{0000}</displayFormat>
        <label>SOR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>