force-app/main/default/objects/Sales_Order_Request__c/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account City</label>
    <type>Text</type>
</CustomField>