force-app/main/default/objects/Sales_Order_Request__c/fields/Account_Zip__c.field-meta.xml
<CustomField>
    <fullName>Account_Zip__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Zip/Postal Code</label>
    <type>Text</type>
</CustomField>