force-app/main/default/objects/Sales_Order_Request__c/fields/Bill_to_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_State__c</fullName>
    <label>Bill to State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>