force-app/main/default/objects/Sales_Order_Request__c/fields/Bill_to_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Zip_Postal_Code__c</fullName>
    <label>Bill to Zip/Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>