force-app/main/default/objects/Sales_Order_Request__c/fields/Carrier_Account_number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Account_number__c</fullName>
    <label>Carrier Account #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>