force-app/main/default/objects/Sales_Order_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Order Requests</relationshipLabel>
    <relationshipName>Sales_Order_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>