force-app/main/default/objects/Sales_Order_Request__c/fields/Contract_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amendment__c</fullName>
    <label>Contract / Amendment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Not Requested Yet</fullName>
            </value>
            <value>
                <fullName>Request not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>