force-app/main/default/objects/Sales_Order_Request__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>