force-app/main/default/objects/Sales_Order_Request__c/fields/Date_Order_Placed__c.field-meta.xml
<CustomField>
    <fullName>Date_Order_Placed__c</fullName>
    <label>Date Order Placed</label>
    <type>Date</type>
</CustomField>