force-app/main/default/objects/Sales_Order_Request__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.District__c, &quot;B2B2C&quot;), &quot;B2B2C&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Canada&quot;), &quot;Canada&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Central&quot;), &quot;Central&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;CNR Strategic&quot;), &quot;CNR Strategic&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Consumer Content Services&quot;), &quot;Consumer Content Services&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East&quot;), &quot;East&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 1&quot;), &quot;East District 1&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 2&quot;), &quot;East District 2&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 3&quot;), &quot;East District 3&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 4&quot;), &quot;East District 4&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;East District 5&quot;), &quot;East District 5&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Industrial&quot;), &quot;Industrial&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;International&quot;), &quot;International&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;LBS&quot;), &quot;LBS&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Metro&quot;), &quot;Metro&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Midwest District 1&quot;), &quot;Midwest District 1&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Midwest District 2&quot;), &quot;Midwest District 2&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Midwest District 3&quot;), &quot;Midwest District 3&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Midwest District 4&quot;), &quot;Midwest District 4&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Mountain&quot;), &quot;Mountain&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;North&quot;), &quot;North&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Notebook and MID Management Services&quot;), &quot;Notebook and MID Management Services&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;ORMM OEM&quot;), &quot;ORMM OEM&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;QC Accounts&quot;), &quot;QC Accounts&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;QES&quot;), &quot;QES&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;QGOV&quot;), &quot;QGOV&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;South&quot;), &quot;South&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Strategic&quot;), &quot;Strategic&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;Telemedicine&quot;), &quot;Telemedicine&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;VASP&quot;), &quot;VASP&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West&quot;), &quot;West&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 1&quot;), &quot;West District 1&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 2&quot;), &quot;West District 2&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 3&quot;), &quot;West District 3&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 4&quot;), &quot;West District 4&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;West District 5&quot;), &quot;West District 5&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;ORMM Region 1&quot;), &quot;ORMM Region 1&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;ORMM Region 2&quot;), &quot;ORMM Region 2&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;ORMM Region 3&quot;), &quot;ORMM Region 3&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;ORMM Region 4&quot;), &quot;ORMM Region 4&quot;,
IF(ISPICKVAL(Account__r.District__c, &quot;ORMM Region 5&quot;), &quot;ORMM Region 5&quot;,
&quot;Other&quot;)))))))))))))))))))))))))))))))))))))))))</formula>
    <inlineHelpText>Account District</inlineHelpText>
    <label>District</label>
    <type>Text</type>
</CustomField>