force-app/main/default/objects/Sales_Order_Request__c/fields/Expedited_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Reason__c</fullName>
    <label>Expedited Reason</label>
    <type>TextArea</type>
</CustomField>