force-app/main/default/objects/Sales_Order_Request__c/fields/Financial_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Financial_Hold_Date__c</fullName>
    <label>Financial Hold Date</label>
    <type>Date</type>
</CustomField>