force-app/main/default/objects/Sales_Order_Request__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;If this order is being financed, please provide the name and address of the Lending Institution in  in the Bill To Section&quot;</defaultValue>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>