force-app/main/default/objects/Sales_Order_Request__c/fields/Oracle_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Sales_Order__c</fullName>
    <label>Oracle Sales Order #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>