force-app/main/default/objects/Sales_Order_Request__c/fields/Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Ship_Date__c</fullName>
    <defaultValue>Today() + 2</defaultValue>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>