force-app/main/default/objects/Sales_Order_Request__c/fields/Sales_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Sales_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Order_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>