force-app/main/default/objects/Sales_Order_Request__c/fields/Sales_Order_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Request_Status__c</fullName>
    <label>Sales Order Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Contract Hold</fullName>
            </value>
            <value>
                <fullName>Finance Hold</fullName>
            </value>
            <value>
                <fullName>Order Placed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>