force-app/main/default/objects/Sales_Order_Request__c/fields/Ship_Method__c.field-meta.xml
<CustomField>
    <fullName>Ship_Method__c</fullName>
    <label>Ship Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overnight AM</fullName>
            </value>
            <value>
                <fullName>2-Day</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
                <default>true</default>
                <label>Ground</label>
            </value>
            <value>
                <fullName>Overnight PM</fullName>
            </value>
            <value>
                <fullName>Customer Pick-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>