force-app/main/default/objects/Sales_Order_Request__c/fields/Ship_to_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_State__c</fullName>
    <label>Ship To State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>