force-app/main/default/objects/Sales_Order_Request__c/fields/Ship_to_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Zip_Postal_Code__c</fullName>
    <label>Ship To Zip/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>