force-app/main/default/objects/Sales_Order_Request__c/recordTypes/Completed_Sales_Order_Request.recordType-meta.xml
<RecordType>
    <fullName>Completed_Sales_Order_Request</fullName>
    <active>true</active>
    <label>Completed Sales Order Request</label>
</RecordType>