force-app/main/default/objects/Sales_Order_Request__c/recordTypes/In_Progress_Sales_Order_Request.recordType-meta.xml
<RecordType>
    <fullName>In_Progress_Sales_Order_Request</fullName>
    <active>true</active>
    <label>In Progress Sales Order Request</label>
</RecordType>