force-app/main/default/objects/Sales_Order_Request__c/recordTypes/New_Sales_Order_Request.recordType-meta.xml
<RecordType>
    <fullName>New_Sales_Order_Request</fullName>
    <active>true</active>
    <description>New Sales Order Request</description>
    <label>New Sales Order Request</label>
</RecordType>