force-app/main/default/objects/Sales_Order_Request__c/validationRules/Oracle_Sales_Order_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Oracle_Sales_Order_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(ISPICKVAL( Sales_Order_Request_Status__c , &quot;Order Placed&quot;)),
(Oracle_Sales_Order__c =&quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Oracle_Sales_Order__c</errorDisplayField>
    <errorMessage>Oracle Sales order #  is required when an Order is placed</errorMessage>
</ValidationRule>