force-app/main/default/objects/Sales_Order_Request__c/validationRules/Scheduled_Ship_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Ship_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
(ISPICKVAL( Sales_Order_Request_Status__c , &quot;Order Placed&quot;)),
(ISNULL(Scheduled_Ship_Date__c)),
False
)</errorConditionFormula>
    <errorDisplayField>Scheduled_Ship_Date__c</errorDisplayField>
    <errorMessage>Scheduled Ship Date is required when an Order is placed</errorMessage>
</ValidationRule>