force-app/main/default/objects/Sales_Order_Request__c/listViews/All_Sales_Order_Requests.listView-meta.xml
<ListView>
    <fullName>All_Sales_Order_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Cust_ID__c</columns>
    <columns>District__c</columns>
    <columns>Sales_Administrator__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Requested_Ship_Date__c</columns>
    <columns>Sales_Order_Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Order Requests</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>